--- a/environment.yml
+++ b/environment.yml
@@ -6,117 +6,151 @@ channels:
   - defaults
 dependencies:
   - ambermini=16.16.0=7
-  - appnope=0.1.0=py37_1000
-  - asn1crypto=0.24.0=py37_1003
+  - appnope=0.1.0=py36_1000
   - attrs=19.1.0=py_0
+  - autopep8=1.4.4=py_0
   - backcall=0.1.0=py_0
+  - biopython=1.74=py36h01d97ff_0
   - bleach=3.1.0=py_0
-  - boost=1.70.0=py37haf112f3_1
+  - boost=1.70.0=py36haf112f3_1
   - boost-cpp=1.70.0=h75728bb_2
   - bson=0.5.8=py_0
   - bzip2=1.0.8=h01d97ff_0
   - ca-certificates=2019.6.16=hecc5488_0
   - cairo=1.16.0=he1c11cd_1002
-  - certifi=2019.6.16=py37_1
-  - cffi=1.12.3=py37hccf1714_0
-  - chardet=3.0.4=py37_1003
-  - cryptography=2.7=py37h212c5bf_0
+  - certifi=2019.6.16=py36_1
+  - cftime=1.0.3.4=py36h1e5eb4f_1001
+  - curl=7.65.3=h22ea746_0
+  - cycler=0.10.0=py_1
+  - dbus=1.13.6=h2f22bb5_0
   - decorator=4.4.0=py_0
   - defusedxml=0.5.0=py_1
-  - entrypoints=0.3=py37_1000
+  - entrypoints=0.3=py36_1000
+  - expat=2.2.5=h6de7cb9_1003
   - fftw3f=3.3.4=2
   - fontconfig=2.13.1=h6b1039f_1001
   - freetype=2.10.0=h24853df_0
   - gettext=0.19.8.1=h46ab8bc_1002
   - glib=2.58.3=h9d45998_1002
+  - griddataformats=0.5.0=py_0
+  - gsd=1.7.0=py36h1e5eb4f_0
+  - hdf4=4.2.13=hf3c6af0_1002
+  - hdf5=1.10.5=nompi_h0cbb7df_1100
   - icu=64.2=h6de7cb9_0
-  - idna=2.8=py37_1000
-  - ipykernel=5.1.1=py37h5ca1d4c_0
-  - ipython=7.7.0=py37h5ca1d4c_0
+  - ipykernel=5.1.1=py36h5ca1d4c_0
+  - ipython=7.7.0=py36h5ca1d4c_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.5.1=py_0
-  - jedi=0.14.1=py37_0
+  - jedi=0.14.1=py36_0
   - jinja2=2.10.1=py_0
+  - joblib=0.13.2=py_0
   - jpeg=9c=h1de35cc_1001
-  - jsonschema=3.0.1=py37_0
+  - jsonschema=3.0.1=py36_0
+  - jupyter=1.0.0=py_2
   - jupyter_client=5.3.1=py_0
+  - jupyter_console=6.0.0=py_0
+  - jupyter_contrib_core=0.3.3=py_2
+  - jupyter_contrib_nbextensions=0.5.1=py36_0
   - jupyter_core=4.4.0=py_0
+  - jupyter_highlight_selected_word=0.2.0=py36_1000
+  - jupyter_latex_envs=1.4.4=py36_1000
+  - jupyter_nbextensions_configurator=0.4.1=py36_0
+  - kiwisolver=1.1.0=py36h770b8ee_0
+  - krb5=1.16.3=hcfa6398_1001
   - libblas=3.8.0=11_openblas
   - libcblas=3.8.0=11_openblas
+  - libcurl=7.65.3=h16faf7d_0
   - libcxx=8.0.0=4
   - libcxxabi=8.0.0=4
+  - libedit=3.1.20170329=hcfe32e1_1001
   - libffi=3.2.1=h6de7cb9_1006
-  - libgcc=4.8.5=1
-  - libgfortran=4.0.0=0
+  - libgcc=4.8.5=hdbeacc1_10
+  - libgfortran=3.0.1=0
   - libiconv=1.15=h01d97ff_1005
   - liblapack=3.8.0=11_openblas
-  - libopenblas=0.3.6=h4bb4525_6
+  - libnetcdf=4.6.2=h1a02027_1002
+  - libopenblas=0.3.6=hd44dcd8_6
   - libpng=1.6.37=h2573ce8_0
   - libsodium=1.0.17=h01d97ff_0
+  - libssh2=1.8.2=hcdc9a53_2
   - libtiff=4.0.10=hd08fb8f_1003
   - libxml2=2.9.9=h12c6b28_2
+  - libxslt=1.1.32=h320ff13_1004
+  - llvm-openmp=8.0.0=h770b8ee_0
+  - lxml=4.4.0=py36h08abf6f_0
   - lz4-c=1.8.3=h6de7cb9_1001
-  - markupsafe=1.1.1=py37h1de35cc_0
-  - mistune=0.8.4=py37h1de35cc_1000
-  - msgpack-python=0.6.1=py37h04f5b5a_0
+  - markupsafe=1.1.1=py36h1de35cc_0
+  - matplotlib=3.1.1=py36_1
+  - matplotlib-base=3.1.1=py36h3a684a6_1
+  - mdanalysis=0.19.2=py36h0a44026_1000
+  - mistune=0.8.4=py36h1de35cc_1000
+  - mmtf-python=1.1.2=py_0
+  - msgpack-python=0.6.1=py36h04f5b5a_0
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py_1
   - ncurses=6.1=h0a44026_1002
+  - netcdf4=1.5.1.2=py36h876e625_1
   - networkx=2.3=py_0
   - nglview=2.6.1=pyh5ca1d4c_0
-  - notebook=6.0.0=py37_0
-  - numpy=1.17.0=py37h6b0580a_0
+  - notebook=6.0.0=py36_0
+  - numpy=1.17.0=py36h6b0580a_0
   - olefile=0.46=py_0
-  - openforcefield=0.4.1=py37_0
-  - openmm=7.3.1=py37_cuda92_rc_2
+  - openforcefield=0.4.1=py36_0
+  - openmm=7.3.1=py36_cuda92_rc_2
   - openssl=1.1.1c=h01d97ff_0
   - packaging=19.0=py_0
-  - pandas=0.25.0=py37h86efe34_0
+  - pandas=0.25.0=py36h86efe34_0
   - pandoc=2.7.3=0
   - pandocfilters=1.4.2=py_1
-  - parmed=3.2.0=py37_0
+  - parmed=3.2.0=py36_0
   - parso=0.5.1=py_0
+  - patsy=0.5.1=py_0
   - pcre=8.41=h0a44026_1003
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=py37_1000
-  - pillow=6.0.0=py37h7095ceb_0
-  - pip=19.2.1=py37_0
+  - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_1000
+  - pillow=6.0.0=py36h7095ceb_0
+  - pip=19.2.1=py36_0
   - pixman=0.38.0=h01d97ff_1003
   - plotly=4.0.0=py_0
   - prometheus_client=0.7.1=py_0
   - prompt_toolkit=2.0.9=py_0
   - ptyprocess=0.6.0=py_1001
-  - pycairo=1.18.1=py37h650f75e_0
-  - pycparser=2.19=py37_1
+  - pycairo=1.18.1=py36h650f75e_0
+  - pycodestyle=2.5.0=py_0
   - pygments=2.4.2=py_0
-  - pyopenssl=19.0.0=py37_0
   - pyparsing=2.4.2=py_0
-  - pyrsistent=0.15.4=py37h01d97ff_0
-  - pysocks=1.7.0=py37_0
-  - python=3.7.3=h93065d6_1
+  - pyqt=5.9.2=py36h2a560b1_1
+  - pyrsistent=0.15.4=py36h01d97ff_0
+  - python=3.6.7=h94afb7f_1005
   - python-dateutil=2.8.0=py_0
   - pytz=2019.2=py_0
-  - pyyaml=5.1.2=py37h01d97ff_0
-  - pyzmq=18.0.2=py37hee98d25_2
-  - rdkit=2019.03.2=py37hbdb07b7_1
+  - pyyaml=5.1.2=py36h01d97ff_0
+  - pyzmq=18.0.2=py36hee98d25_2
+  - qt=5.9.7=h8cf7e54_3
+  - qtconsole=4.5.2=py_0
+  - rdkit=2019.03.2=py36hbdb07b7_1
   - readline=8.0=hcfe32e1_0
-  - requests=2.22.0=py37_1
   - retrying=1.3.3=py_2
+  - rise=5.5.1=py36_0
+  - scikit-learn=0.21.3=py36hd4ffd6c_0
+  - scipy=1.3.0=py36hab3da7d_1
+  - seaborn=0.9.0=py_1
   - send2trash=1.5.0=py_0
-  - setuptools=41.0.1=py37_0
-  - six=1.12.0=py37_1000
+  - setuptools=41.0.1=py36_0
+  - sip=4.19.8=py36h0a44026_1000
+  - six=1.12.0=py36_1000
   - sqlite=3.29.0=hb7d70f7_0
-  - terminado=0.8.2=py37_0
+  - statsmodels=0.10.1=py36heacc8b8_0
+  - terminado=0.8.2=py36_0
   - testpath=0.4.2=py_1001
   - tk=8.6.9=h2573ce8_1002
   - toml=0.10.0=py_0
-  - tornado=6.0.3=py37h01d97ff_0
-  - traitlets=4.3.2=py37_1000
-  - urllib3=1.25.3=py37_0
+  - tornado=6.0.3=py36h01d97ff_0
+  - traitlets=4.3.2=py36_1000
   - wcwidth=0.1.7=py_1
   - webencodings=0.5.1=py_1
-  - wheel=0.33.4=py37_0
-  - widgetsnbextension=3.5.1=py37_0
+  - wheel=0.33.4=py36_0
+  - widgetsnbextension=3.5.1=py36_0
   - xmltodict=0.12.0=py_0
   - xz=5.2.4=h1de35cc_1001
   - yaml=0.1.7=h1de35cc_1001
